text align fixed #1

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ragbot-voice {
+  text-align: left;
+}
+
+.ragbot-chat {
+  text-align: left;
+}
